base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: java-ms
  labels:
    backstage.io/kubernetes-id: java-ms
