base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-ms
  labels:
    app: java-ms
    backstage.io/kubernetes-id: java-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-ms
  template:
    metadata:
      labels:
        app: java-ms
    spec:
      containers:
        - name: java-ms
          image: ghcr.io/botopsy/java-ms:latest
          ports:
            - containerPort: 3000
