base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-ms-service
  labels:
    backstage.io/kubernetes-id: java-ms
spec:
  selector:
    app: java-ms
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
